# shazam_for_gurbani

./: .editorconfig  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  SECURITY.md  SETUP.md  TESTING.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
audio_files/: .gitkeep
backend/: Dockerfile  app.py  check_setup.py  config.py  models.py  recognizer.py  requirements.txt  test_apis.py  train.py
frontend/: Dockerfile  index.html  nginx.conf  package.json
frontend/src/: App.jsx  config.js
frontend/src/components/: APITestPanel.jsx  HomeView.jsx  ListeningView.jsx  ResultView.jsx
frontend/src/services/: api.js  apiTesting.js
frontend/src/utils/: audioUtils.js  validation.js
